重新推送，刚才失误

--- a/docs/blog/mylife/8.md
+++ b/docs/blog/mylife/8.md
@@ -5,7 +5,7 @@ description: "待补充摘要..."
 tags: [生活]
 categories: [阳光生活]
 cover: "/images/8-cover.svg"
-publish: false
+publish: true
 draft: false
 ---
 
