fix(theme):侧边栏垂直分割线

--- a/docs/blog/mylife/8.md
+++ b/docs/blog/mylife/8.md
@@ -1,9 +1,9 @@
 ---
-title: "国庆8天乐"
+title: 国庆8天乐哈哈哈哈哈哈哈哈哈哈哈哈只见
 date: 2025/10/04 17:44:46
 description: "待补充摘要..."
-tags: [生活]
-categories: [阳光生活]
+tags: 生活
+categories: 阳光生活
 cover: "/images/8-cover.svg"
 publish: true
 draft: false
